--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission
-  is to help scientists and engineers get more research done in less
+  This page contains the schedule and lesson notes for the R stream at ResBaz 2016 hosted at 
+  The University of Melbourne from February 1st - 3rd.
+</p>
+<p>
+  The lessons for the R stream have been developed by the international 
+  <a href="{{site.swc_site}}">Software Carpentry</a> community, whose mission
+  is to help researchers get more done in less
   time and with less pain by teaching them basic lab skills for
   scientific computing.  This hands-on workshop will cover basic
   concepts and tools, including program design, version control, data
@@ -105,12 +110,29 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
 
   Modify the block below if there are any special requirements.
 -->
-<p id="requirements">
-  <strong>Requirements:</strong> Participants must bring a laptop with
-  a few specific software packages installed (listed
-  <a href="#setup">below</a>). They are also required to abide by
-  Software Carpentry's
+
+<p>
+  <strong>Requirements:</strong> 
+  Participants must bring a wifi-capable laptop, 
+  from which they will logon to the 
+  <a href="http://resbaz.cloud.edu.au/ ">Data Intensive Tools for the Cloud</a>
+  (DIT4C) environment on the 
+  <a href="http://its.unimelb.edu.au/research/our_services/cloud_computing/research_cloud">NeCTAR Research Cloud</a>.
+  This environment has all the required software pre-installed,
+  so there's nothing participants need to bring or do in preparation for the workshop.
+  Having said that, there are software installation instructions <a href="#software_install">below</a> 
+  for participants who'd like to install the software on their own computer before or after the workshop.
+  Also note that participants are required to abide by Software Carpentry's
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
+</p>
+
+<p>
+  <strong>Wifi:</strong>
+  University of Melbourne staff/students can connect to the UniWireless network; 
+  instructions on how to do this and where to get assistance can be found
+  <a href="https://its.unimelb.edu.au/help/networks-access/networks-internet/connect-wireless/unimelb">here</a>.
+  Attendees from other Australian universities should find out (from the IT website of
+  their home institution) how to connect to the Eduroam wireless network.
 </p>
 
 <!--
@@ -144,27 +166,50 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Monday Febraury 1st</h3>
     <table class="table table-striped">
-      <tr> <td>Arrival</td>  <td><a href='{{ site.swc_pre_survey }}{{ site.github.project_title }}'>Pre-workshop Survey</a></td> </tr>
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>08:00</td>  <td>Registration</td> </tr>
+      <tr> <td>09:00</td>  <td>Welcome and keystory</td> </tr>
+      <tr> <td>09:30</td>  <td>Training Session A</td> </tr>
+      <tr> <td>11:00</td>  <td>Morning Tea</td> </tr>
+      <tr> <td>11:30</td>  <td>Training Session B</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch</td> </tr>
+      <tr> <td>14:00</td>  <td>Training Session C</td> </tr>
+      <tr> <td>15:30</td>  <td>Afternoon Tea</td> </tr>
+      <tr> <td>16:00</td>  <td>Social events</td> </tr>
+      <tr> <td>18:30</td>  <td>Dinner</td> </tr>
+      <tr> <td>19:30</td>  <td>Social events</td> </tr>
+      <tr> <td>22:00</td>  <td>End of day</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Tuesday February 2nd</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>  <td>Keystory</td> </tr>
+      <tr> <td>09:30</td>  <td>Project Management with RStudio</td> </tr>
+      <tr> <td>11:00</td>  <td>Morning Tea</td> </tr>
+      <tr> <td>11:30</td>  <td>Training Session B</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch</td> </tr>
+      <tr> <td>14:00</td>  <td>Training Session C</td> </tr>
+      <tr> <td>15:30</td>  <td>Afternoon Tea</td> </tr>
+      <tr> <td>16:00</td>  <td>Social events</td> </tr>
+      <tr> <td>18:30</td>  <td>Dinner</td> </tr>
+      <tr> <td>19:30</td>  <td>Social events</td> </tr>
+      <tr> <td>22:00</td>  <td>End of day</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>Dismissal</td>  <td><a href='{{ site.swc_post_survey }}{{ site.github.project_title }}'>Post-workshop Survey</a></td> </tr>
+      <tr> <td>09:00</td>  <td>Keystory</td> </tr>
+      <tr> <td>09:30</td>  <td>Elective Subject</td> </tr>
+      <tr> <td>11:00</td>  <td>Morning Tea</td> </tr>
+      <tr> <td>11:30</td>  <td>Elective subject</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch</td> </tr>
+      <tr> <td>14:00</td>  <td>Elective subject</td> </tr>
+      <tr> <td>15:30</td>  <td>Afternoon Tea</td> </tr>
+      <tr> <td>16:00</td>  <td>Awards Ceremony</td> </tr>
+      <tr> <td>18:30</td>  <td>End of event</td> </tr>
     </table>
   </div>
 </div>
