fixed schedule layout

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <tr> <td>22:00</td>  <td>End of day</td> </tr>
     </table>
   </div>
+</div>
+<div class="row">
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
