Added lesson note templates

--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Monday Febraury 1st</h3>
+    <h3>Monday February 1st</h3>
     <table class="table table-striped">
       <tr> <td>08:00</td>  <td>Registration</td> </tr>
       <tr> <td>09:00</td>  <td>Welcome and keystory</td> </tr>
-      <tr> <td>09:30</td>  <td>Training Session A</td> </tr>
+      <tr> <td>09:30</td>  <td>R Session A</td> </tr>
       <tr> <td>11:00</td>  <td>Morning Tea</td> </tr>
-      <tr> <td>11:30</td>  <td>Training Session B</td> </tr>
+      <tr> <td>11:30</td>  <td>R Session B</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch</td> </tr>
-      <tr> <td>14:00</td>  <td>Training Session C</td> </tr>
+      <tr> <td>14:00</td>  <td>R Session C</td> </tr>
       <tr> <td>15:30</td>  <td>Afternoon Tea</td> </tr>
       <tr> <td>16:00</td>  <td>Social events</td> </tr>
       <tr> <td>18:30</td>  <td>Dinner</td> </tr>
@@ -199,9 +199,9 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <tr> <td>09:00</td>  <td>Keystory</td> </tr>
       <tr> <td>09:30</td>  <td>Project Management with RStudio</td> </tr>
       <tr> <td>11:00</td>  <td>Morning Tea</td> </tr>
-      <tr> <td>11:30</td>  <td>Training Session B</td> </tr>
+      <tr> <td>11:30</td>  <td>Shell Session A</td> </tr>
       <tr> <td>13:00</td>  <td>Lunch</td> </tr>
-      <tr> <td>14:00</td>  <td>Training Session C</td> </tr>
+      <tr> <td>14:00</td>  <td>Shell Session B</td> </tr>
       <tr> <td>15:30</td>  <td>Afternoon Tea</td> </tr>
       <tr> <td>16:00</td>  <td>Social events</td> </tr>
       <tr> <td>18:30</td>  <td>Dinner</td> </tr>
@@ -272,86 +272,46 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
 
 <div class="row">
   <div class="col-md-6">
-    <h3 id="syllabus-shell">The Unix Shell</h3>
-    <ul>
-      <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
-      <li>Finding things</li>
-      <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li>
-    </ul>
+    <h3 id="syllabus-day-1">Monday February 1st</h3>
+    <h4>R Session A</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
+    <h4>R Session B</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
+    <h4>R Session C</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-python">Programming in Python</h3>
-    <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_githubio}}/python-novice-inflammation/reference.html">Reference...</a></li>
-    </ul>
-  </div>
-  <!--
-  <div class="col-md-6">
-    <h3 id="syllabus-r">Programming in R</h3>
-    <ul>
-      <li>Working with vectors and data frames</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Using R from the command line</li>
-      <li><a href="{{site.swc_githubio}}/r-novice-inflammation/reference.html">Reference...</a></li>
-    </ul>
-  </div>
-  -->
-  <!--
-  <div class="col-md-6">
-    <h3 id="syllabus-matlab">Programming in MATLAB</h3>
-    <ul>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li><a href="{{site.swc_githubio}}/matlab-novice-inflammation/reference.html">Reference...</a></li>
-     </ul>
-   </div>
-   -->
-</div>
-
-<div class="row">
-  <div class="col-md-6">
-    <h3 id="syllabus-git">Version Control with Git</h3>
-    <ul>
-      <li>Creating a repository</li>
-      <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
-      <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
-      <li>Ignoring files</li>
-      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Resolving conflicts</li>
-      <li>Open licenses</li>
-      <li>Where to host work, and why</li>
-      <li><a href="{{site.swc_githubio}}/git-novice/reference.html">Reference...</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3 id="syllabus-sql">Managing Data with SQL</h3>
-    <ul>
-      <li>Reading and sorting data</li>
-      <li>Filtering with <code>where</code></li>
-      <li>Calculating new values on the fly</li>
-      <li>Handling missing values</li>
-      <li>Combining values using aggregation</li>
-      <li>Combining information from multiple tables using <code>join</code></li>
-      <li>Creating, modifying, and deleting data</li>
-      <li>Programming with databases</li>
-      <li><a href="{{site.swc_githubio}}/sql-novice-survey/reference.html">Reference...</a></li>
-    </ul>
+    <h3 id="syllabus-day-1">Tuesday February 1st</h3>
+    <h4>Project Management with RStudio</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
+    <h4>Shell Session A</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
+    <h4>Shell Session B</h4>
+    <ol>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+      <li>Lesson goes here</li>
+    </ol>
   </div>
 </div>
 
