--- a/index.html
+++ b/index.html
@@ -273,44 +273,43 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
 <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-day-1">Monday February 1st</h3>
-    <h4>R Session A</h4>
+    <h4>R stream session 1</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro.html">Introduction to R and RStudio</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2.html">Reading in data</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/03-seeking-help.html">Seeking Help</a></li>
     </ol>
-    <h4>R Session B</h4>
+    <h4>R stream session 2</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1.html">Data structures</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/06-data-subsetting.html">Manipulating data</a></li>
     </ol>
-    <h4>R Session C</h4>
+    <h4>R stream session 3</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/07-functions.html">Creating functions</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/10-control-flow.html">Control flow</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2.html">Data visualisation</a></li>
     </ol>
   </div>
   <div class="col-md-6">
     <h3 id="syllabus-day-1">Tuesday February 1st</h3>
-    <h4>Project Management with RStudio</h4>
+    <h4>R stream session 4</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro.html">Project management with RStudio</a></li>
+      <li><a href="http://swcarpentry.github.io/git-novice/04-changes.html">Creating a logbook of your work using git</a></li>
+      <li><a href="http://swcarpentry.github.io/git-novice/07-github.html">Publishing to GitHub</a></li>
+      <li><a href="http://swcarpentry.github.io/git-novice/08-collab.html">Collaborating with others</a></li>
+      <li><a href="http://swcarpentry.github.io/git-novice/09-conflict.html">Collaborating with others: conflict management</a></li>
     </ol>
-    <h4>Shell Session A</h4>
+    <h4>R stream session 5</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Navigating a remote cluster filesystem</a></li>
+      <li><a href="http://swcarpentry.github.io/shell-novice/02-create.html">Creating, deleting, and editing files on a cluster</a></li>
     </ol>
-    <h4>Shell Session B</h4>
+    <h4>R stream session 6</h4>
     <ol>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
-      <li>Lesson goes here</li>
+      <li><a href="http://swcarpentry.github.io/shell-novice/04-loop.html">Batch processing files</a> and <a href="http://swcarpentry.github.io/shell-novice/05-script.html">bash scripts</a></li>
+      <li><a href="http://swcarpentry.github.io/shell-novice/06-find.html">Searching and processing text</a></li>
     </ol>
   </div>
 </div>
