--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ humandate: Feb 01-03, 2016  # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: 9:30 am - 3:30 pm   # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-02-01  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2016-02-03    # use YYYY-MM-DD format like" 2015-01-02"
-instructor: ["Scott Ritchie", "Tim Rice"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Scott Ritchie"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Elisabeth Vogel", "Momeneh Foroutan", "Luke Zappia", "Andy Krause", "Chenkai Ma", "Campbell Pryor", "Nikki Rubenstein", "Tiane Ryman", "Soroor Hediyeh Zadeh", "Kirill Tsyganov"]
 contact: scottr@student.unimelb.edu.au    # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the URL for your Etherpad if you're using one)
