added missing git lesson

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
     <ol>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro.html">Project management with RStudio</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/04-changes.html">Creating a logbook of your work using git</a></li>
+      <li><a href="http://swcarpentry.github.io/git-novice/05-history.html">Managing your logbook history</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/07-github.html">Publishing to GitHub</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/08-collab.html">Collaborating with others</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/09-conflict.html">Collaborating with others: conflict management</a></li>
