added links to the software carpentry repos

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/10-control-flow.html">Control flow</a></li>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2.html">Data visualisation</a></li>
     </ol>
+    For extended materials see <a href="http://swcarpentry.github.io/r-novice-gapminder/index.html">Software Carpentry's novice R lesson</a>.
   </div>
   <div class="col-md-6">
     <h3 id="syllabus-day-1">Tuesday February 1st</h3>
@@ -302,6 +303,7 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <li><a href="http://swcarpentry.github.io/git-novice/08-collab.html">Collaborating with others</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/09-conflict.html">Collaborating with others: conflict management</a></li>
     </ol>
+    For extended materials see <a href="http://swcarpentry.github.io/git-novice/index.html">Software Carpentry's novice git lesson</a>.
     <h4>R stream session 5</h4>
     <ol>
       <li><a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Navigating a remote cluster filesystem</a></li>
@@ -312,6 +314,8 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <li><a href="http://swcarpentry.github.io/shell-novice/04-loop.html">Batch processing files</a> and <a href="http://swcarpentry.github.io/shell-novice/05-script.html">bash scripts</a></li>
       <li><a href="http://swcarpentry.github.io/shell-novice/06-find.html">Searching and processing text</a></li>
     </ol>
+    For extended materials see <a href="http://swcarpentry.github.io/shell-novice/index.html">Software Carpentry's novice shell lesson</a>.
+    <h4>R stream session 5</h4>
   </div>
 </div>
 
