--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 9:30 am - 3:30 pm   # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-02-01  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2016-02-03    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Scott Ritchie"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Elisabeth Vogel", "Momeneh Foroutan", "Luke Zappia", "Andy Krause", "Chenkai Ma", "Campbell Pryor", "Nikki Rubenstein", "Tiane Ryman", "Soroor Hediyeh Zadeh", "Kirill Tsyganov"]
+helper: ["Elisabeth Vogel", "Momeneh Foroutan", "Luke Zappia", "Andy Krause", "Chenkai Ma", "Campbell Pryor", "Nikki Rubenstein", "Tiane Ryman", "Kirill Tsyganov"]
 contact: scottr@student.unimelb.edu.au    # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the URL for your Etherpad if you're using one)
 ---
@@ -293,7 +293,7 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
     For extended materials see <a href="http://swcarpentry.github.io/r-novice-gapminder/index.html">Software Carpentry's novice R lesson</a>.
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-day-1">Tuesday February 1st</h3>
+    <h3 id="syllabus-day-1">Tuesday February 2nd</h3>
     <h4>R stream session 4</h4>
     <ol>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro.html">Project management with RStudio</a></li>
