--- a/index.html
+++ b/index.html
@@ -288,13 +288,21 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
     <ol>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/07-functions.html">Creating functions</a></li>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/10-control-flow.html">Control flow</a></li>
-      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2.html">Data visualisation</a></li>
     </ol>
     For extended materials see <a href="http://swcarpentry.github.io/r-novice-gapminder/index.html">Software Carpentry's novice R lesson</a>.
   </div>
   <div class="col-md-6">
     <h3 id="syllabus-day-1">Tuesday February 2nd</h3>
     <h4>R stream session 4</h4>
+    <ol>
+      <li>Concept review</li>
+    </ol>
+    <h4>R stream session 5</h4>
+    <ol>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2.html">Data visualisation</a></li>
+      <li><a href="http://resbaz.github.io/r-intermediate-gapminder/18-rmd.html">Putting R in a word document</a></li>
+    </ol>
+    <h4>R stream session 6</h4>
     <ol>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/02-project-intro.html">Project management with RStudio</a></li>
       <li><a href="http://swcarpentry.github.io/git-novice/04-changes.html">Creating a logbook of your work using git</a></li>
@@ -304,18 +312,6 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <li><a href="http://swcarpentry.github.io/git-novice/09-conflict.html">Collaborating with others: conflict management</a></li>
     </ol>
     For extended materials see <a href="http://swcarpentry.github.io/git-novice/index.html">Software Carpentry's novice git lesson</a>.
-    <h4>R stream session 5</h4>
-    <ol>
-      <li><a href="http://swcarpentry.github.io/shell-novice/01-filedir.html">Navigating a remote cluster filesystem</a></li>
-      <li><a href="http://swcarpentry.github.io/shell-novice/02-create.html">Creating, deleting, and editing files on a cluster</a></li>
-    </ol>
-    <h4>R stream session 6</h4>
-    <ol>
-      <li><a href="http://swcarpentry.github.io/shell-novice/04-loop.html">Batch processing files</a> and <a href="http://swcarpentry.github.io/shell-novice/05-script.html">bash scripts</a></li>
-      <li><a href="http://swcarpentry.github.io/shell-novice/06-find.html">Searching and processing text</a></li>
-    </ol>
-    For extended materials see <a href="http://swcarpentry.github.io/shell-novice/index.html">Software Carpentry's novice shell lesson</a>.
-    <h4>R stream session 5</h4>
   </div>
 </div>
 
