added links to shell lessons

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ etherpad: http://pad.software-carpentry.org/r-resbaz-2016 # optional (insert the
       <li><a href="http://swcarpentry.github.io/git-novice/09-conflict.html">Collaborating with others: conflict management</a></li>
     </ol>
     For extended materials see <a href="http://swcarpentry.github.io/git-novice/index.html">Software Carpentry's novice git lesson</a>.
+    These require some shell skills, see <a href="http://swcarpentry.github.io/shell-novice/index.html">Software Carpentry's shell lesson</a>
   </div>
 </div>
 
